--- a/src/Components/BottomNav/BottomNav.css
+++ b/src/Components/BottomNav/BottomNav.css
@@ -5,18 +5,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 4;
+    z-index: 1;
 }
 
 .MuiBottomNavigation-root{
-    background-color: #1b1b1b !important;
+    background-color: white !important;
 }
 
 .MuiBottomNavigationAction-label , .MuiSvgIcon-root{
-    color: #fff;
+    color: #000;
 }
 
 .Mui-selected .MuiBottomNavigationAction-label ,
 .Mui-selected  .MuiSvgIcon-root{
-    color: #6a8cfa;
+    color: purple;
 }
