--- a/src/Components/CustomPagination/CustomPagination.css
+++ b/src/Components/CustomPagination/CustomPagination.css
@@ -6,8 +6,9 @@
     padding: .7rem;
     font-size: 1.3rem;
     font-weight: 400;
+    color: white;
 }
 
 .MuiPaginationItem-icon{
-    color: rgb(0, 0, 0);
+    color:white;
 }
