--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,12 +4,14 @@
     justify-content: center;
     width: 100%;
     height: 100px;
-    background-color: #1a1a1a;
+    background-color: white;
 }
 
 .header span{
     font-size: 3rem;
     font-weight: 300;
     padding: .5rem;
-    color: white;
+    line-height: 1;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif
 }
